Fix p spacing and primer css

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -400,7 +400,7 @@ p, .p {
   font-size: (4rem / 4);
   font-weight: 400;
   line-height: (8rem / 4);
-  margin: (0 0 4rem / 4);
+  margin: 0 0 (4rem / 4);
 }
 
 pre, code {
